secondary fails to start index build due to in-progress aborted index build with duplicate name

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-10-07
    • 15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A primary node that steps down with an ongoing index build may affect new index builds containing the same index names as a secondary.

      If the interrupted index build started when the node was a primary is slow to complete its teardown, it may conflict with new index builds triggered by the createIndexes oplog entry due to the IndexBuildAlreadyInProgress check in the IndexBuildsCoordinator. This error is considered non-fatal during oplog application and would result in the secondary node silently ignore the index creation request.

      This issue affects index builds started on a primary that is using the IndexBuildsCoordinator so we should not see this same failure under 4.2.

      Also, this issue should go away with two phase index builds but may still be observer under FCV 4.2 when we trigger index builds on the createIndexes oplog entry.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: