SERVER-43612 log index build conflict details